Make plugin compatible with Paper 1.20.4 through 26.1.2
- Compile against Paper 1.20.4-R0.1-SNAPSHOT; set api-version to 1.20
- Replace Material.MACE direct references with getMaterial runtime lookups
- Replace NamespacedKey AttributeModifier constructors with UUID-based form
- Rename 1.21+ Attribute short names to GENERIC_* form for 1.20.4 API
- Replace PotionEffectType.SLOWNESS/Particle.DUST/POOF with 1.20.4 names

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>